--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
     box-sizing: border-box;
 }
 
-#wrapper{
+#wrapper
+{
     width: 1200px;
     margin: auto;
     margin-top: 15px;
@@ -15,78 +16,91 @@
 header
 {
     background-image: url("https://organicthemes.com/demo/natural-lite/wp-content/themes/natural-lite/images/default-header.jpg");
-    border: 5px solid white;
+    border: 3px solid lightgrey;
     text-align: center;
     color: white;
     padding: 80px 0;
 }
 
-h1{
+h1
+{
     text-transform: uppercase;
     margin-bottom: 15px;
     font-size: 40px;
     font-family: 'Montserrat', sans-serif;
 }
 
-h2{
+h2
+{
     text-transform: uppercase;
     font-size: 15px;
     font-family: 'Montserrat';
     letter-spacing: 3px;
 }
 
-nav{
+nav
+{
     background-color: #504741;
     margin-bottom: 7px;
 }
 
-nav ul{
+nav ul
+{
     text-align: center;
-    border-left: 5px solid white;
-    border-right: 5px solid white;
-    border-bottom: 5px solid white;
+    border-left: 3px solid lightgrey;
+    border-right: 3px solid lightgrey;
+    border-bottom: 3px solid lightgrey;
+
 }
 
-nav li{
+nav li
+{
     display: inline-block;
     height: 50px;
     line-height: 50px;
 }
 
-nav a{
+nav a
+{
     color: white;
     text-decoration: none;
     text-transform: uppercase;
     padding: 16px 16px;
 }
 
-nav li:hover{
+nav li:hover
+{
     background-color: #302b27;
 }
 
-h4{
+h4
+{
     display: block;
     padding: 10px;
     font-size: 20px;
 }
 
-.container::after{
+.container::after
+{
     content: '';
     display: table;
     clear: both;
 }
 
-.sinistra{
+.sinistra
+{
     float: left;
     width: 25%;
 }
 
-.destra{
+.destra
+{
     float: left;
     width: 25%;
 }
 
-.box{
+.box
+{
     background-color: white;
     box-shadow: 0px 0px 4px rgba(0, 0, 0, .24);
     padding: 20px;
@@ -94,22 +108,26 @@ h4{
     margin-bottom: 20px;
 }
 
-.box ul{
+.box ul
+{
     list-style-type: none;
 }
 
-.box a{
+.box a
+{
         text-decoration: none;
         color: green;
         font-size: 16px;
-        font-family: 'Roboto', sans-serif;
+        font-family: 'Montserrat', sans-serif;
 }
 
-.box li{
+.box li
+{
     padding: 10px;
 }
 
-.box li:hover{
+.box li:hover
+{
     background-color: lightgrey;
 }
 
@@ -118,11 +136,77 @@ body
     background-image: url("https://organicthemes.com/demo/natural-lite/wp-content/themes/natural-lite/images/default-pattern.png");
 }
 
-main{
+
+.middle
+{
     background-color: white;
     float: left;
     width:calc(50% - 20px);
-    height: 500px;
+    height: auto;
     margin-left: 10px;
     margin-right: 10px;
+}
+
+.maintitle
+{
+    color: #504741;
+    text-decoration: none;
+    text-align:left;
+    font-size: 35px;
+    border: none;
+    font-family: 'Montserrat';
+    text-transform: uppercase;
+    text-shadow: 3px 3px 0px rgba(0, 0, 0, .1);
+    line-height: 1.1;
+    letter-spacing: -1.4px;
+    margin: 0px 0px 12px 0px;
+    padding: 24px;
+}
+
+.middle p
+{
+    color: #504741;
+    text-align: left;
+    font-family: 'Montserrat';
+    font-size: 14px;
+    border: none;
+    padding-left: 24px;
+}
+
+.paragrafo-main p{
+    margin: 30px 0;
+    color: #504741;
+    text-align: left;
+    font-family: 'Montserrat';
+    font-size: 16px;
+    border: none;
+    height: auto;
+}
+
+.tag
+{
+    text-decoration: none;
+    color: green;
+    font-family: 'Montserrat';
+    font-size: 14px;
+    border: none;
+}
+
+.nomisezione{
+    color: #504741;
+    font-family: 'Montserrat';
+    font-size: 14px;
+    border: none;
+}
+
+.immagine-main img{
+    margin-top: 30px;
+    max-width: 100%;
+}
+main{
+
+}
+
+main a{
+    display: inline-block;
 }
