hover sulla classe tag per far apparire un underline

--- a/style.css
+++ b/style.css
@@ -193,6 +193,10 @@ body
     border: none;
 }
 
+.tag:hover{
+    text-decoration: underline;
+}
+
 .nomisezione{
     color: #504741;
     font-family: 'Montserrat';
